# modulariti-opt-public

./: .gitignore  Dockerfile  README.md  pyproject.toml
mod-opt/: Analysis_Modularit_Opt_CUDA.ipynb  eda_modularity_opt_cuda.ipynb  time_series_focus_modularity_opt.ipynb
