[project]
name = "mod-opt"
version = "0.1.0"
description = "Modularity optimization demo using neo4j graph database"
authors = [
    {name = "Matthew Robinson",email = "mattkrobinson@berkeley.edu"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jupyter (>=1.1.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
